--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ nav {
     width: 100%;
     background-color: #6cbe45;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     color: white;
 }
@@ -28,7 +29,7 @@ img {
 ul {
     margin: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     list-style-type: none;
 }
 
