--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ img {
     float: right;
 }
 
+#gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 25%);
+    aspect-ratio: 1;
+}
+
 .item {
     margin: 10px;
 }
