--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ img {
     float: right;
 }
 
-#gallery {
+.gallery {
     display: grid;
-    grid-template-columns: repeat(2, 25%);
+    grid-template-columns: repeat(2, 50%);
     aspect-ratio: 1;
 }
 
@@ -35,7 +35,7 @@ img {
 ul {
     margin: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     list-style-type: none;
 }
 
