--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ img {
 .gallery {
     display: grid;
     grid-template-columns: repeat(2, 25%);
+    grid-template-rows: repeat(2, 50%);
     aspect-ratio: 1;
+    float: right;
 }
 
 .item {
