--- a/style.css
+++ b/style.css
@@ -13,16 +13,19 @@ nav {
 }
 
 img {
-    height: auto;
     width: 50%;
     display: flex;
-    align-items: center;
-    justify-content: center;
     float: right;
+}
+
+#gallery {
+    aspect-ratio: 1;
+    float: top;
 }
 
 .item {
     margin: 10px;
+    object-fit: fill;
 }
 
 ul {
@@ -90,16 +93,25 @@ footer {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.section {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    object-fit: fill;
+    float: left;
+}
+
 .info {
-    min-height: 350px;
-    width: 25%;
+    width: 50%;
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: left;
     font-family: Arial, Helvetica, sans-serif;
     float: left;
+}
+
+input {
+    width: 90%;
 }
 
 @media screen and (max-width: 480px) {
