--- a/style.css
+++ b/style.css
@@ -18,9 +18,19 @@ img {
     float: right;
 }
 
-#gallery {
-    aspect-ratio: 1;
-    float: top;
+.gallery {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+}
+
+.gallery img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .item {
@@ -112,6 +122,12 @@ footer {
 
 input {
     width: 90%;
+}
+
+iframe {
+    height: auto;
+    width: 50%;
+    float: left;
 }
 
 @media screen and (max-width: 480px) {
