--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@ input {
     width: 90%;
 }
 
-iframe {
+video {
     height: auto;
-    width: 50%;
+    width: 100%;
     aspect-ratio: 16/9;
     float: left;
 }
